2945370 by serhiy-chornobay: Fix styles for comment on mobile

--- a/themes/socialbase/components/04-organisms/comment/comment.scss
+++ b/themes/socialbase/components/04-organisms/comment/comment.scss
@@ -158,7 +158,7 @@
     .stream-item:last-child & {
       @include for-phone-only {
         &:focus {
-          margin-bottom: 50px;
+          margin-bottom: 150px;
         }
       }
     }
